--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TrackingCarbon Emissions in Europe</title>
+    <title>Tracking Carbon Emissions in Europe</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 
     <!-- Including the Mapbox GL CSS file -->
@@ -15,17 +15,66 @@
     <link href='index.css' rel='stylesheet' />
     <script src='index.js'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Add CSS for the legend -->
+    <style>
+        /* Legend styling */
+        #legend {
+            position: absolute;
+            bottom: 80px; /* Positioned above the slider */
+            right: 20px;
+            background: white;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            z-index: 1; /* Ensure it appears above the map */
+        }
+        #legend h4 {
+            margin: 0 0 10px 0;
+            font-size: 16px;
+        }
+        #legend div {
+            margin: 5px 0;
+            display: flex;
+            align-items: center;
+        }
+        #legend span {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            margin-right: 5px;
+            border-radius: 50%;
+        }
+        #legend p {
+            margin: 10px 0 0 0;
+            font-size: 12px;
+            color: #666;
+        }
+    </style>
 </head>
 
 <body>
     <main id="container">
-      <div id="map"></div>
-      <div class="controls">
-          <label>CO2 Emissions Threshold:</label>
-          <input type="range" id="co2-slider" min="0" max="100" step="1" value="50">
-          <span id="co2-value">50</span> Mt
-      </div>
+        <!-- Map container -->
+        <div id="map"></div>
 
+        <!-- Legend -->
+        <div id="legend">
+            <h4>Legend</h4>
+            <div><span style="background: #008000;"></span>Low Emissions Per Capita</div>
+            <div><span style="background: #ffff00;"></span>Medium Emissions Per Capita</div>
+            <div><span style="background: #ff0000;"></span>High Emissions Per Capita</div>
+            <p>Circle size represents total CO₂ emissions.</p>
+        </div>
+
+        <!-- Slider controls -->
+        <div class="controls">
+            <label>CO2 Emissions Threshold:</label>
+            <input type="range" id="co2-slider" min="0" max="10" step="0.1" value="5">
+            <span id="co2-value">5</span> Mt
+        </div>
     </main>
 </body>
 
