add intro page and hover function for info popup

--- a/index.html
+++ b/index.html
@@ -18,6 +18,45 @@
 </head>
 
 <body>
+    <!-- Introduction Page -->
+    <div id="intro-page" class="intro">
+        <div class="intro-content">
+            <h1>Tracking Carbon Emissions in Europe</h1>
+            
+            <h2>Project Description</h2>
+            <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends, compare data, and understand the factors influencing emissions.</p>
+
+            <h2>Project Goal</h2>
+            <p>The goal of this project is to deliver a clear and interactive visualization of carbon emissions in Europe, emphasizing the importance of per capita measurements. By highlighting both high and low emissions countries, the project aims to:</p>
+            <ul>
+                <li>Raise awareness about the impact of population growth and energy consumption on carbon emissions.</li>
+                <li>Encourage discussions on effective strategies for reducing carbon footprints.</li>
+                <li>Provide a resource for policymakers, educators, and the public to explore and compare emissions data.</li>
+            </ul>
+
+            <h2>Main Functions</h2>
+            <ul>
+                <li><strong>Interactive Map:</strong> Visualize carbon emissions per capita and total CO₂ emissions for European countries.</li>
+                <li><strong>Color Gradient:</strong> Green (low emissions), Yellow (medium), Red (high).</li>
+                <li><strong>Circle Size:</strong> Represents total CO₂ emissions.</li>
+            </ul>
+
+            <h2>Data Sources</h2>
+            <ul>
+                <li><strong>Per Capita Emissions:</strong> Our World in Data</li>
+                <li><strong>Population Density:</strong> Our World in Data</li>
+            </ul>
+
+            <h2>Applied Libraries & Web Services</h2>
+            <ul>
+                <li><strong>GitHub:</strong> Hosting & deployment</li>
+                <li><strong>Excel:</strong> Data cleaning & preparation</li>
+            </ul>
+
+            <button id="start-exploring">Start Exploring</button>
+        </div>
+    </div>
+
     <main id="container">
         <div id="map"></div>
         <div id="legend">
