Update index.html WITH README

--- a/index.html
+++ b/index.html
@@ -24,33 +24,40 @@
             <h1>Tracking Carbon Emissions in Europe</h1>
             
             <h2>Project Description</h2>
-            <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends, compare data, and understand the factors influencing emissions.</p>
+            <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends, compare data, and understand the factors influencing emissions. The goal is to provide a tool for policymakers, environmental organizations, and the general public to better understand carbon emissions and identify strategies for reducing them.</p>
 
             <h2>Project Goal</h2>
-            <p>The goal of this project is to deliver a clear and interactive visualization of carbon emissions in Europe, emphasizing the importance of per capita measurements. By highlighting both high and low emissions countries, the project aims to:</p>
+            <p>The primary goal of this project is to deliver a clear and interactive visualization of carbon emissions in Europe, emphasizing the importance of per capita measurements to ensure fair comparisons between countries of different sizes. By highlighting both high and low emissions countries, the project aims to:</p>
             <ul>
                 <li>Raise awareness about the impact of population growth and energy consumption on carbon emissions.</li>
                 <li>Encourage discussions on effective strategies for reducing carbon footprints.</li>
                 <li>Provide a resource for policymakers, educators, and the public to explore and compare emissions data.</li>
             </ul>
 
+            <h2>Application URL</h2>
+            <p><a href="https://jordanchiang627.github.io/Geog328_FinalProject/" target="_blank">https://jordanchiang627.github.io/Geog328_FinalProject/</a></p>
+
             <h2>Main Functions</h2>
             <ul>
                 <li><strong>Interactive Map:</strong> Visualize carbon emissions per capita and total CO₂ emissions for European countries.</li>
-                <li><strong>Color Gradient:</strong> Green (low emissions), Yellow (medium), Red (high).</li>
-                <li><strong>Circle Size:</strong> Represents total CO₂ emissions.</li>
+                <li><strong>Color Gradient:</strong> Use a color gradient to represent emissions per capita (green for low, yellow for medium, red for high).</li>
+                <li><strong>Circle Size:</strong> Represent total CO₂ emissions using circle size.</li>
+                <li><strong>Time Slider:</strong> Allows users to explore data from 1950 to 2023.</li>
+                <li><strong>Popup Information:</strong> Displays detailed information (population density and emissions per capita) when hovering over a country.</li>
             </ul>
 
             <h2>Data Sources</h2>
             <ul>
-                <li><strong>Per Capita Emissions:</strong> Our World in Data</li>
-                <li><strong>Population Density:</strong> Our World in Data</li>
+                <li><strong>Per Capita Emissions:</strong> <a href="https://ourworldindata.org/" target="_blank">Our World in Data</a></li>
+                <li><strong>Population Density:</strong> <a href="https://ourworldindata.org/" target="_blank">Our World in Data</a></li>
             </ul>
 
-            <h2>Applied Libraries & Web Services</h2>
+            <h2>Applied Libraries and Web Services</h2>
             <ul>
-                <li><strong>GitHub:</strong> Hosting & deployment</li>
-                <li><strong>Excel:</strong> Data cleaning & preparation</li>
+                <li><strong>GitHub:</strong> For hosting the repository and deploying the web application.</li>
+                <li><strong>Excel:</strong> For initial data cleaning and preparation.</li>
+                <li><strong>HTML/CSS/JavaScript:</strong> For building the front-end interface.</li>
+                <li><strong>Turf.js:</strong> For geospatial analysis (e.g., calculating centroids).</li>
             </ul>
 
             <button id="start-exploring">Start Exploring</button>
