--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <h2>Application URL</h2>
             <p><a href="https://jordanchiang627.github.io/Geog328_FinalProject/" target="_blank">https://jordanchiang627.github.io/Geog328_FinalProject/</a></p>
 
+            <h2>Screenshots</h2>
+            <img src="images/screenshot1950.png" alt="1950 Carbon Emissions in Europe" width="600">
+            <p>Europe Carbon Emissions (1950)</p>
+            <img src="images/screenshot2023.png" alt="2023 Carbon Emissions in Europe" width="600">
+            <p>Europe Carbon Emissions (2023)</p>
+
             <h2>Main Functions</h2>
             <ul>
                 <li><strong>Interactive Map:</strong> Visualize carbon emissions per capita and total CO₂ emissions for European countries.</li>
