--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
             <h2>Screenshots</h2>
             <img src="images/screenshot1950.png" alt="1950 Carbon Emissions in Europe" width="600">
-            <p>Europe Carbon Emissions (1950)</p>
+            <p style="text-align: center;">Europe Carbon Emissions (1950)</p>
             <img src="images/screenshot2023.png" alt="2023 Carbon Emissions in Europe" width="600">
-            <p>Europe Carbon Emissions (2023)</p>
+            <p style="text-align: center;">Europe Carbon Emissions (2023)</p>
 
             <h2>Main Functions</h2>
             <ul>
