added favicon for website icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>European Carbon Emissions over Time</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
     <!-- Including the Mapbox GL CSS file -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
 
@@ -22,7 +23,7 @@
     <div id="intro-page" class="intro">
         <div class="intro-content">
             <h1>Tracking Carbon Emissions in Europe</h1>
-            
+
             <h2>Project Description</h2>
             <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends, compare data, and understand the factors influencing emissions. The goal is to provide a tool for policymakers, environmental organizations, and the general public to better understand carbon emissions and identify strategies for reducing them.</p>
 
