--- a/index.html
+++ b/index.html
@@ -22,31 +22,23 @@
     <!-- Introduction Page -->
     <div id="intro-page" class="intro">
         <div class="intro-content">
+            <br><br><br><br><br>
             <h1>Tracking Carbon Emissions in Europe</h1>
 
             <h2>Project Description</h2>
-            <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends, compare data, and understand the factors influencing emissions. The goal is to provide a tool for policymakers, environmental organizations, and the general public to better understand carbon emissions and identify strategies for reducing them.</p>
+            <p>This project aims to create an interactive web map that visualizes carbon emissions across European countries on a per capita basis. The map highlights countries with both high and low carbon emissions, allowing users to explore trends and understand emissions and population density have changed overtime. The goal is to provide a tool for policymakers, environmental organizations, and the general public to better understand carbon emissions and identify strategies for reducing them.</p>
 
             <h2>Project Goal</h2>
-            <p>The primary goal of this project is to deliver a clear and interactive visualization of carbon emissions in Europe, emphasizing the importance of per capita measurements to ensure fair comparisons between countries of different sizes. By highlighting both high and low emissions countries, the project aims to:</p>
+            <p>The primary goal of this project is to deliver a clear and interactive visualization of carbon emissions in Europe since 1950, emphasizing the importance of per capita measurements to ensure fair comparisons between countries of different sizes. By highlighting both high and low emissions countries, the project aims to:</p>
             <ul>
                 <li>Raise awareness about the impact of population growth and energy consumption on carbon emissions.</li>
                 <li>Encourage discussions on effective strategies for reducing carbon footprints.</li>
                 <li>Provide a resource for policymakers, educators, and the public to explore and compare emissions data.</li>
             </ul>
 
-            <h2>Application URL</h2>
-            <p><a href="https://jordanchiang627.github.io/Geog328_FinalProject/" target="_blank">https://jordanchiang627.github.io/Geog328_FinalProject/</a></p>
-
-            <h2>Screenshots</h2>
-            <img src="images/screenshot1950.png" alt="1950 Carbon Emissions in Europe" width="600">
-            <p style="text-align: center;">Europe Carbon Emissions (1950)</p>
-            <img src="images/screenshot2023.png" alt="2023 Carbon Emissions in Europe" width="600">
-            <p style="text-align: center;">Europe Carbon Emissions (2023)</p>
-
             <h2>Main Functions</h2>
             <ul>
-                <li><strong>Interactive Map:</strong> Visualize carbon emissions per capita and total CO₂ emissions for European countries.</li>
+                <li><strong>Interactive Map:</strong> Visualize carbon emissions per capita and total CO₂ emissions for European countries by year.</li>
                 <li><strong>Color Gradient:</strong> Use a color gradient to represent emissions per capita (green for low, yellow for medium, red for high).</li>
                 <li><strong>Circle Size:</strong> Represent total CO₂ emissions using circle size.</li>
                 <li><strong>Time Slider:</strong> Allows users to explore data from 1950 to 2023.</li>
@@ -68,6 +60,7 @@
             </ul>
 
             <button id="start-exploring">Start Exploring</button>
+            <br><br>
         </div>
     </div>
 
